--- a/sprint-one/styles/main.scss
+++ b/sprint-one/styles/main.scss
@@ -1,56 +1,314 @@
-.header{
-    &__title {
+@use "./partials/variables" as *;
+@use "./partials/typography" as *;
+@use "./partials/mixins" as *;
 
+    *{
+        box-sizing: border-box;
+    }
+
+.header{
+    background-color: $bandsite-black;
+    color: $white;
+    list-style-type: none;
+    padding:0 ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+        @include tablet {
+            flex-direction: row;
+            align-items: center;
+            height: 80px;
+        }
+    &__logo {
+    @include font-family-normal;
+    @include font-properties(24px, 32px);
+    @include logo-sizing;
+    margin: 16px;
+        @include tablet {
+            margin-top: 0;
+            margin-left: 36px;
+            margin-bottom: 0;
+            max-height: 100%;
+        }
+        @include desktop {
+            margin-left: 128px;
+        }
     }
     &__nav {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: space-between;
+            @include tablet {
+                justify-content: flex-start;
+                align-items: center;
+            }
         &-item {
-            &-link{
+            width: 50%;
+            text-align: center;
+            padding-bottom: 16px;
+            position: relative;
+            border-bottom: 5px solid $bandsite-black;
+            color: $mercury;
+                @include tablet {
+                    width: 5%;
+                    min-width: 80px;
+                    height: 100%;
+                    margin-left: 36px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    padding-bottom: 0;
+                }
+            &:hover {
+                border-bottom: 5px solid $white;
+                color: $white;
+            }
 
+            &--current{
+                border-bottom: 5px solid $white;
+                color: $white;
+            }
+            &-link{
+                @include font-family-normal;
+                width: 100%;
+                &--bold {
+                    font-weight: 600;
+                }
             }
         }
-        
     }
-
 }
 
-
-.main
-
 .flowers{
+    background-image: url("../assets/images/hero-bio.jpg");
+    background-size: cover;
+    background-position: center;
+    min-height: 250px;
+    display: flex;
+    align-items: center;
+    position: relative;
+        @include tablet {
+            min-height: 120vh;
+            background-position: center;
+        }
+    
     &__title{
-
+        @include font-family-bold;
+        @include font-properties(24px, 32px);
+        @include mobile-padding;
+        color: $white;
+        position: relative;
+        z-index: 1;        
+            @include tablet {
+                @include font-properties(60px, 68px);
+                padding:0 36px;
+            }   
+            @include desktop {
+                padding: 36px 128px;
+        }
     }
 
+    &::after {
+        content: "";
+        position: absolute;
+        min-width: 100%;
+        min-height: 100%;
+        background-color: $bandsite-black;
+        opacity: 0.5;
+    }
 }
 
 .about {
+
+    &-one {
+        @include mobile-padding;
+            @include tablet {
+                @include tablet-padding;
+            }
+            @include desktop {
+                padding: 36px 128px;
+            }
+    }
+
     &__title{
+        @include font-family-bold;
+        @include font-properties(24px, 32px);
+            margin-top: 0;
+            margin-bottom:0;
+            padding-top: 24px;
+            padding-bottom: 16px;
+        @include tablet {
+            @include font-properties(36px, 44px);
+            padding-top: 48px;
+            padding-bottom: 36px;
+        }
+
 
     }
-    &__image{
 
+    &__img {
+        height: 250px;
+        overflow: hidden;
+        background-image: url("../assets/images/band.jpg");
+        background-size: cover;
+        background-position: center;
+        position: relative;
+            @include tablet {
+                height: 450px;
+                margin:0 36px;
+            }
+            @include desktop {
+                margin:0 64px;
+            }
     }
+
     &__quote{
+        @include font-family-bold;
+        @include font-properties(14px, 22px);
+        @include tablet {
+            @include font-properties(24px, 32px);
+            margin:0 36px;
+            padding-top: 36px;
+            padding-bottom: 36px;
+            
+            @include desktop {
+                margin:0 64px;
+            }
+            &--size {
+                @include tablet {
+                font-size: 1.5rem;
+                padding:0;
+                }
+            }
+        }
 
+
+    }
+
+    &-two {
+        @include mobile-padding;
+        @include tablet {
+            @include tablet-padding;
+                display: flex;
+                flex-wrap: wrap;
+                padding-top: 48px;
+                padding-bottom: 36px;
+        }
+        @include desktop {
+            padding: 36px 128px;
+
+        }
     }
 
     &__title-two {
-
+        @include font-family-bold;
+        @include font-properties(14px, 22px);
+        @include mobile-padding;
+        margin: 0;
+        @include tablet {
+            @include tablet-padding;
+            @include font-properties(24px, 32px);
+            margin: 0;
+            width: 100%;
+            padding-bottom: 36px;
+        }
+        @include desktop {
+            padding:0 64px;
+        }
     }
 
     &__content {
+        @include font-family-normal;
+        @include font-properties(13px, 18px);
+        @include tablet {
+                    @include font-properties(14px, 22px);
+                    width: 50%;
+                    margin-top: 0;
+                    margin-bottom: 0;
+                    padding-right: 0;
+                    padding-left: 36px;
+                    @include desktop {
+                        padding-left: 64px;
+                    }
+        }
+        &--padding {
+            @include tablet {
+                padding-left: 24px;
 
+            }
+            
+        }
     }
-       
 }
 
           
-
-
-
 .gallery {
-    &__image {
+    @include mobile-padding;
+    background-color: $alabaster;
+    display: flex;
+    flex-direction: column;
+    @include tablet {
+        padding: 0;
+        }
+    &-photos {
+        @include tablet {
+            @include tablet-padding;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        @include desktop {
+            padding: 36px 128px;
 
+        }
+    }
+    &-block {
+        @include tablet {
+
+            display: flex;
+            max-width: 100%;
+            justify-content: center;
+
+        }   
+    }
+
+
+    &__title {
+    @include font-family-bold;
+    @include font-properties(24px, 32px);
+    margin-top: 0;
+    margin-bottom:0;
+    padding-top: 24px;
+    padding-bottom: 16px;
+        @include tablet {
+            @include tablet-padding;
+            @include font-properties(36px, 44px);
+            width: 100%;
+            padding-top: 48px;
+            padding-bottom: 36px;
+        }
+            @include desktop {
+            padding: 0 128px;
+            margin-bottom: 0;
+        }
+    }
+
+    &__image {
+        max-width: 100%;
+        margin-bottom: 16px;
+        @include tablet {
+            max-width: 32%;
+            padding-bottom: 24px;
+            margin-bottom: 0;
+        }
+        
+
+        &--margin {
+            @include tablet {
+
+            }
+        }
     }
 }
 
@@ -59,32 +317,150 @@
 
 
 .footer {
-    &-icons{
-        &__image{
-
+    @include mobile-padding;
+    color: white;
+    background-color: $bandsite-black;
+    padding-top: 16px;
+    padding-bottom: 16px;
+        @include tablet {
+            padding: 36px 36px;
         }
+        @include desktop {
+            padding: 36px 128px;
+            margin:0 auto;
+        }
+    &-blockone {
+        @include tablet {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        @include desktop {
+        }
+
+            &__left {
+                @include tablet {
+                    display: flex;
+                justify-content: flex-start;
+                }
+            }
+        }
+        }
+        &__header {
+            @include font-family-bold;
+            @include font-properties(24px, 32px);
+            margin-top: 0;
+                @include tablet {
+                    @include font-properties(36px, 44px);
+                    display: flex;
+                    align-items: flex-end;
+                    margin-bottom: 0;
+                    align-items: center;
+                    
+                }
+        }
+
+        &-icons{
+            @include tablet {
+                padding-left: 24px;
+                display: flex;
+                align-items: center;
+            }
+        &__image{
+            margin-right: 32px;
+                @include tablet {
+                    margin-right: 24px;
+                }
+            }
+        }
+    &-blocktwo {
+        @include tablet {
+            display: flex;
+            width: 100%;
+            justify-content: flex-start;
+        }
+
     }
 
     &-contacts {
-        &-block {
-
+        @include tablet {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            min-width: 206px;
+            padding: 36px 0;
         }
         &__name {
-
+            @include font-family-bold;
+            @include font-properties(14px, 22px);
+            margin: 0 0 16px 0;
         }
-        &__title {
+        &__company {
+            @include font-family-bold;
+            @include font-properties(14px, 22px);
+            margin-top: 0;
+                @include tablet {
+                    margin-bottom: 36px;
+                }
 
         }
         &__info {
-
+            @include font-family-normal;
+            @include font-properties(13px, 18px);
+            margin: 0;
+                @include tablet {
+                    @include font-properties(14px, 20px);
+                }
         }
-
+        &__email {
+            @include font-family-normal;
+            @include font-properties(13px, 18px);
+            @include tablet {
+                margin-top: 36px;
+                @include font-properties(14px, 20px);
+            }
+        }
+        &--padding {
+            @include tablet {
+            margin-left: 24px;
+        }
+            @include desktop {
+                margin-left: 24px;
+            }
+        }
     } 
-    &__title {
-
+    &__logo {
+    @include font-family-normal;
+    @include logo-sizing;
+    @include font-properties(24px, 32px);
+    @include tablet {
+        display: none;
     }
+        &-hidden {
+            display: none;    
+            @include tablet {
+                @include font-family-normal;
+                @include logo-sizing;
+                @include font-properties(24px, 32px);
+                display: block;
+            }
+        }
+   
+    }
+
+    
     &__copyright {
-        
+            @include font-family-normal;
+            @include font-properties(13px, 18px);
+            margin-bottom: 0;
+                @include tablet {
+                    @include font-properties(14px, 20px);
+                    width: 100%;
+                    
+                }
+                @include desktop {
+                    justify-content: flex-start;
+                
+                }
     }
 }
 
