--- a/sprint-one/styles/partials/_mixins.scss
+++ b/sprint-one/styles/partials/_mixins.scss
@@ -8,13 +8,13 @@
     @content;
 }
 
-@mixin mobile-padding {
+@mixin mobile-side-padding {
     padding:0 16px;
     @content;
 }
 
 
-@mixin tablet-padding {
+@mixin tablet-side-padding {
     padding:0 36px;
     @content;
 }
