--- a/sprint-one/styles/main.css
+++ b/sprint-one/styles/main.css
@@ -36,6 +36,15 @@
     height: 80px;
   }
 }
+.header__logowrapper {
+  margin-top: 24px;
+  margin-bottom: 12px;
+}
+@media (min-width: 768px) {
+  .header__logowrapper {
+    margin: 0;
+  }
+}
 .header__logo {
   font-family: "Avenir";
   font-weight: 400;
@@ -46,12 +55,11 @@
   max-width: 120px;
   text-decoration: none;
   color: white;
-  margin: 16px 16px;
+  margin: 16px;
 }
 @media (min-width: 768px) {
   .header__logo {
-    margin: 0 36px;
-    max-height: 100%;
+    margin: auto 36px;
   }
 }
 @media (min-width: 1278px) {
@@ -61,9 +69,9 @@
 }
 .header__nav {
   display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
-  justify-content: space-between;
 }
 @media (min-width: 768px) {
   .header__nav {
@@ -74,9 +82,9 @@
 .header__nav-item {
   width: 50%;
   text-align: center;
-  padding-bottom: 16px;
   position: relative;
-  border-bottom: 5px solid #323232;
+  padding-bottom: 16px;
+  border-bottom: 3px solid #323232;
   color: #E1E1E1;
 }
 @media (min-width: 768px) {
@@ -92,11 +100,13 @@
   }
 }
 .header__nav-item:hover {
-  border-bottom: 5px solid white;
+  border-bottom: 3px solid white;
   color: white;
+  -webkit-animation: color-change 2s ease-in-out 0s infinite alternate;
+          animation: color-change 2s ease-in-out 0s infinite alternate;
 }
 .header__nav-item--current {
-  border-bottom: 5px solid white;
+  border-bottom: 3px solid white;
   color: white;
 }
 .header__nav-item-link {
@@ -113,15 +123,19 @@
   background-image: url("../assets/images/hero-bio.jpg");
   background-size: cover;
   background-position: center;
-  min-height: 250px;
+  min-height: 300PX;
   display: flex;
   align-items: center;
   position: relative;
 }
 @media (min-width: 768px) {
   .flowers {
-    min-height: 120vh;
-    background-position: center;
+    min-height: 500px;
+  }
+}
+@media (min-width: 1278px) {
+  .flowers {
+    min-height: 700px;
   }
 }
 .flowers__title {
@@ -156,6 +170,9 @@
   opacity: 0.5;
 }
 
+.about {
+  color: #323232;
+}
 .about-one {
   padding: 0 16px;
 }
@@ -166,7 +183,7 @@
 }
 @media (min-width: 1278px) {
   .about-one {
-    padding: 36px 128px;
+    padding: 0 128px 36px;
   }
 }
 .about__title {
@@ -185,6 +202,29 @@
     font-size: 36px;
     line-height: 44px;
     padding-top: 48px;
+    padding-bottom: 36px;
+  }
+}
+.about__subtitle {
+  font-family: "Avenir";
+  font-weight: 600;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 22px;
+  margin: 0;
+}
+@media (min-width: 768px) {
+  .about__subtitle {
+    padding: 0 36px;
+    font-size: 24px;
+    line-height: 32px;
+    width: 100%;
+    padding-bottom: 36px;
+  }
+}
+@media (min-width: 1278px) {
+  .about__subtitle {
+    padding: 0 80px;
     padding-bottom: 36px;
   }
 }
@@ -242,6 +282,7 @@
     padding: 0 36px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     padding-top: 48px;
     padding-bottom: 36px;
   }
@@ -249,31 +290,6 @@
 @media (min-width: 1278px) {
   .about-two {
     padding: 36px 128px;
-  }
-}
-.about__title-two {
-  font-family: "Avenir";
-  font-weight: 600;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 22px;
-  padding: 0 16px;
-  margin: 0;
-}
-@media (min-width: 768px) {
-  .about__title-two {
-    padding: 0 36px;
-    font-size: 24px;
-    line-height: 32px;
-    margin: 0;
-    width: 100%;
-    padding-bottom: 36px;
-  }
-}
-@media (min-width: 1278px) {
-  .about__title-two {
-    padding: 0 80px;
-    padding-bottom: 36px;
   }
 }
 .about__content {
@@ -287,7 +303,7 @@
   .about__content {
     font-size: 14px;
     line-height: 22px;
-    width: 50%;
+    width: 49%;
     margin-top: 0;
     margin-bottom: 0;
     padding-right: 0;
@@ -300,13 +316,20 @@
   }
 }
 @media (min-width: 768px) {
-  .about__content--padding {
-    padding-left: 24px;
+  .about__content--paraTwo {
+    padding-left: 0;
+    padding-right: 36px;
+  }
+}
+@media (min-width: 1278px) {
+  .about__content--paraTwo {
+    padding-right: 80px;
   }
 }
 
 .gallery {
   padding: 0 16px;
+  color: #323232;
   background-color: #FAFAFA;
   display: flex;
   flex-direction: column;
@@ -319,6 +342,7 @@
 @media (min-width: 768px) {
   .gallery-wrapper {
     padding: 0 36px;
+    padding-bottom: 36px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -365,13 +389,19 @@
 @media (min-width: 768px) {
   .gallery__image {
     max-width: 32%;
-    padding-bottom: 24px;
+    padding-bottom: 2%;
     margin-bottom: 0;
   }
 }
 .gallery__image:hover {
   filter: grayscale(0%);
 }
+@media (min-width: 768px) {
+  .gallery__image--bottom {
+    padding-bottom: 0;
+  }
+}
+
 .footer {
   padding: 0 16px;
   color: white;
@@ -381,7 +411,7 @@
 }
 @media (min-width: 768px) {
   .footer {
-    padding: 36px 36px;
+    padding: 48px 36px 36px;
   }
 }
 @media (min-width: 1278px) {
@@ -398,7 +428,7 @@
   }
 }
 @media (min-width: 768px) and (min-width: 768px) {
-  .footer-blockone__left {
+  .footer-blockone-left {
     display: flex;
     justify-content: flex-start;
   }
@@ -415,25 +445,25 @@
   .footer__header {
     font-size: 36px;
     line-height: 44px;
+    width: 207px;
     display: flex;
-    align-items: flex-end;
     margin-bottom: 0;
     align-items: center;
   }
 }
 @media (min-width: 768px) {
   .footer-icons {
-    padding-left: 24px;
+    padding-left: 36px;
     display: flex;
     align-items: center;
   }
 }
 .footer-icons__image {
-  margin-right: 32px;
+  margin-right: 16px;
 }
 @media (min-width: 768px) {
   .footer-icons__image {
-    margin-right: 24px;
+    margin-right: 36px;
   }
 }
 @media (min-width: 768px) {
@@ -448,7 +478,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    min-width: 206px;
+    min-width: 207px;
     padding: 36px 0;
   }
 }
@@ -458,7 +488,12 @@
   font-style: normal;
   font-size: 14px;
   line-height: 22px;
-  margin: 0 0 16px 0;
+  margin: 16px 0 0;
+}
+@media (min-width: 768px) {
+  .footer-contacts__name {
+    margin: 0;
+  }
 }
 .footer-contacts__company {
   font-family: "Avenir";
@@ -466,7 +501,7 @@
   font-style: normal;
   font-size: 14px;
   line-height: 22px;
-  margin-top: 0;
+  margin: 0 0 16px;
 }
 @media (min-width: 768px) {
   .footer-contacts__company {
@@ -493,6 +528,10 @@
   font-style: normal;
   font-size: 13px;
   line-height: 18px;
+  display: block;
+  margin: 16px 0;
+  text-decoration: none;
+  color: white;
 }
 @media (min-width: 768px) {
   .footer-contacts__email {
@@ -503,12 +542,7 @@
 }
 @media (min-width: 768px) {
   .footer-contacts--padding {
-    margin-left: 24px;
-  }
-}
-@media (min-width: 1278px) {
-  .footer-contacts--padding {
-    margin-left: 24px;
+    margin-left: 36px;
   }
 }
 .footer__logo {
@@ -521,9 +555,12 @@
   color: white;
   font-size: 24px;
   line-height: 32px;
+  display: block;
+  margin-top: 64px;
 }
 @media (min-width: 768px) {
   .footer__logo {
+    margin-top: 0;
     display: none;
   }
 }
@@ -542,6 +579,7 @@
     font-size: 24px;
     line-height: 32px;
     display: block;
+    align-self: center;
   }
 }
 .footer__copyright {
@@ -562,5 +600,29 @@
 @media (min-width: 1278px) {
   .footer__copyright {
     justify-content: flex-start;
+  }
+}
+
+@-webkit-keyframes color-change {
+  0% {
+    color: paleturquoise;
+  }
+  50% {
+    color: magenta;
+  }
+  100% {
+    color: paleturquoise;
+  }
+}
+
+@keyframes color-change {
+  0% {
+    color: paleturquoise;
+  }
+  50% {
+    color: magenta;
+  }
+  100% {
+    color: paleturquoise;
   }
 }/*# sourceMappingURL=main.css.map */
