--- a/sprint-one/styles/main.scss
+++ b/sprint-one/styles/main.scss
@@ -6,13 +6,15 @@
         box-sizing: border-box;
     }
 
-    // Header styling
 
+ // Header styling
+
+    
 .header{
     background-color: $bandsite-black;
     color: $white;
     list-style-type: none;
-    padding:0 ;
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,24 +23,32 @@
             align-items: center;
             height: 80px;
         }
+
+    &__logowrapper{
+        margin-top: 24px;
+        margin-bottom: 12px;
+            @include tablet {
+                margin: 0;
+            }
+    }
     &__logo {
     @include font-family-normal;
     @include font-properties(24px, 32px);
-    @include logo-sizing;
-    margin:16px 16px;
-        @include tablet {
-            margin:0 36px;
-            max-height: 100%;
+    @include logo-styling;
+    margin: 16px;
+    @include tablet {
+            margin: auto $nonmobile-general-spacing;
+
         }
         @include desktop {
-            margin-left: 128px;
+            margin-left: $desktop-side-spacing;
         }
     }
     &__nav {
         display: flex;
+        justify-content: space-between;
         width: 100%;
         height: 100%;
-        justify-content: space-between;
             @include tablet {
                 justify-content: flex-start;
                 align-items: center;
@@ -46,27 +56,29 @@
         &-item {
             width: 50%;
             text-align: center;
-            padding-bottom: 16px;
             position: relative;
-            border-bottom: 5px solid $bandsite-black;
+            padding-bottom: 16px;
+            border-bottom: 3px solid $bandsite-black;
             color: $mercury;
                 @include tablet {
                     width: 5%;
                     min-width: 80px;
                     height: 100%;
-                    margin-left: 36px;
+                    margin-left: $nonmobile-general-spacing;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     padding-bottom: 0;
                 }
             &:hover {
-                border-bottom: 5px solid $white;
+                border-bottom: 3px solid $white;
                 color: $white;
+                animation: color-change 2s ease-in-out 0s infinite alternate;
+
             }
 
             &--current{
-                border-bottom: 5px solid $white;
+                border-bottom: 3px solid $white;
                 color: $white;
             }
             &-link{
@@ -86,13 +98,15 @@
     background-image: url("../assets/images/hero-bio.jpg");
     background-size: cover;
     background-position: center;
-    min-height: 250px;
+    min-height: 300PX;
     display: flex;
     align-items: center;
     position: relative;
         @include tablet {
-            min-height: 120vh;
-            background-position: center;
+            min-height: 500px;
+        }
+        @include desktop {
+            min-height: 700px;
         }
     
     &__title{
@@ -104,12 +118,12 @@
         z-index: 1;        
             @include tablet {
                 @include font-properties(60px, 68px);
-                padding:0 36px;
+                padding:0 $nonmobile-general-spacing;
             }   
             @include desktop {
-                padding: 36px 128px;
-        }
-    }
+                padding: $nonmobile-general-spacing $desktop-side-spacing;
+            }
+        }    
 
     &::after {
         content: "";
@@ -123,14 +137,14 @@
 // About styling
 
 .about {
-
+    color: $bandsite-black;
     &-one {
         @include mobile-side-padding;
             @include tablet {
-                @include tablet-side-padding;
+                @include  tablet-side-padding;
             }
             @include desktop {
-                padding: 36px 128px;
+                padding: 0 $desktop-side-spacing $nonmobile-general-spacing ;
             }
     }
 
@@ -138,16 +152,30 @@
         @include font-family-bold;
         @include font-properties(24px, 32px);
             margin-top: 0;
-            margin-bottom:0;
+            margin-bottom: 0;
             padding-top: 24px;
             padding-bottom: 16px;
         @include tablet {
             @include font-properties(36px, 44px);
             padding-top: 48px;
-            padding-bottom: 36px;
+            padding-bottom: $nonmobile-general-spacing;
         }
+    }
 
-
+    &__subtitle{
+        @include font-family-bold;
+        @include font-properties(14px, 22px);
+        margin: 0;
+        @include tablet {
+            @include tablet-side-padding;
+            @include font-properties(24px, 32px);
+            width: 100%;
+            padding-bottom: $nonmobile-general-spacing;
+        }
+        @include desktop {
+            padding: 0 80px;
+            padding-bottom: $nonmobile-general-spacing;
+        }
     }
 
     &__img {
@@ -159,10 +187,10 @@
         position: relative;
             @include tablet {
                 height: 450px;
-                margin:0 36px;
+                margin: 0 $nonmobile-general-spacing;
             }
             @include desktop {
-                margin:0 80px;
+                margin: 0 80px;
             }
     }
 
@@ -171,22 +199,20 @@
         @include font-properties(14px, 22px);
         @include tablet {
             @include font-properties(24px, 32px);
-            margin:0 36px;
-            padding-top: 36px;
-            padding-bottom: 36px;
+            margin:0 $nonmobile-general-spacing;
+            padding-top: $nonmobile-general-spacing;
+            padding-bottom: $nonmobile-general-spacing;
             
             @include desktop {
-                margin:0 80px;
+                margin: 0 80px;
             }
             &--size {
                 @include tablet {
                 font-size: 1.5rem;
-                padding:0;
+                padding: 0;
                 }
             }
         }
-
-
     }
 
     &-two {
@@ -195,50 +221,39 @@
             @include tablet-side-padding;
                 display: flex;
                 flex-wrap: wrap;
+                justify-content: space-between;
                 padding-top: 48px;
-                padding-bottom: 36px;
+                padding-bottom: $nonmobile-general-spacing;
         }
         @include desktop {
-            padding: 36px 128px;
+            padding: $nonmobile-general-spacing $desktop-side-spacing;
 
         }
     }
 
-    &__title-two {
-        @include font-family-bold;
-        @include font-properties(14px, 22px);
-        @include mobile-side-padding;
-        margin: 0;
-        @include tablet {
-            @include tablet-side-padding;
-            @include font-properties(24px, 32px);
-            margin: 0;
-            width: 100%;
-            padding-bottom: 36px;
-        }
-        @include desktop {
-            padding:0 80px;
-            padding-bottom: 36px;
-        }
-    }
+
 
     &__content {
         @include font-family-normal;
         @include font-properties(13px, 18px);
         @include tablet {
                     @include font-properties(14px, 22px);
-                    width: 50%;
+                    width: 49%;
                     margin-top: 0;
                     margin-bottom: 0;
                     padding-right: 0;
-                    padding-left: 36px;
+                    padding-left: $nonmobile-general-spacing;
                     @include desktop {
                         padding-left: 80px;
                     }
         }
-        &--padding {
+        &--paraTwo {
             @include tablet {
-                padding-left: 24px;
+                padding-left: 0;
+                padding-right: 36px;
+            }
+            @include desktop {
+                padding-right: 80px;
 
             }
             
@@ -249,6 +264,7 @@
         //   Gallery styling
 .gallery {
     @include mobile-side-padding;
+    color: $bandsite-black;
     background-color: $alabaster;
     display: flex;
     flex-direction: column;
@@ -256,16 +272,17 @@
         padding: 0;
         }
 
-        // The Photo Gallery Container
+        // The Photo Gallery Warpper-Container
     &-wrapper {
         @include tablet {
             @include tablet-side-padding;
+            padding-bottom: 36px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
         }
         @include desktop {
-            padding: 36px 128px;
+            padding: $nonmobile-general-spacing $desktop-side-spacing;
 
         }
     }
@@ -283,10 +300,10 @@
             @include font-properties(36px, 44px);
             width: 100%;
             padding-top: 48px;
-            padding-bottom: 36px;
+            padding-bottom: $nonmobile-general-spacing;
         }
             @include desktop {
-            padding: 48px 128px 0px;
+            padding: 48px $desktop-side-spacing 0px;
             margin-bottom: 0;
         }
     }
@@ -298,19 +315,17 @@
         transition: filter 1s;
         @include tablet {
             max-width: 32%;
-            padding-bottom: 24px;
+            padding-bottom: 2%;
             margin-bottom: 0;
         }
 
         &:hover {
             filter: grayscale(0%);
-
         }
         
-
-        &--margin {
+        &--bottom {
             @include tablet {
-
+                padding-bottom: 0;
             }
         }
     }
@@ -327,11 +342,11 @@
     padding-top: 16px;
     padding-bottom: 16px;
         @include tablet {
-            padding: 36px 36px;
+            padding: 48px $nonmobile-general-spacing $nonmobile-general-spacing;
         }
         @include desktop {
-            padding: 36px 128px;
-            margin:0 auto;
+            padding: $nonmobile-general-spacing $desktop-side-spacing;
+            margin: 0 auto;
         }
         // Top block
     &-blockone {
@@ -342,9 +357,9 @@
         @include desktop {
         }
 
-            &__left {
+            &-left {
                 @include tablet {
-                    display: flex;
+                display: flex;
                 justify-content: flex-start;
                 }
             }
@@ -356,24 +371,23 @@
             margin-top: 0;
                 @include tablet {
                     @include font-properties(36px, 44px);
+                    width: 207px;
                     display: flex;
-                    align-items: flex-end;
                     margin-bottom: 0;
                     align-items: center;
-                    
                 }
         }
 
         &-icons{
             @include tablet {
-                padding-left: 24px;
+                padding-left: $nonmobile-general-spacing;
                 display: flex;
                 align-items: center;
             }
         &__image{
-            margin-right: 32px;
+            margin-right: 16px;
                 @include tablet {
-                    margin-right: 24px;
+                    margin-right: $nonmobile-general-spacing;
                 }
             }
         }
@@ -392,20 +406,22 @@
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
-            min-width: 206px;
-            padding: 36px 0;
+            min-width: 207px;
+            padding: $nonmobile-general-spacing 0;
         }
         &__name {
             @include font-family-bold;
             @include font-properties(14px, 22px);
-            margin: 0 0 16px 0;
+            margin: 16px 0 0;
+            @include tablet {
+            margin: 0;}
         }
         &__company {
             @include font-family-bold;
             @include font-properties(14px, 22px);
-            margin-top: 0;
+            margin:0 0 16px;
                 @include tablet {
-                    margin-bottom: 36px;
+                    margin-bottom: $nonmobile-general-spacing;
                 }
 
         }
@@ -420,34 +436,40 @@
         &__email {
             @include font-family-normal;
             @include font-properties(13px, 18px);
+            display: block;
+            margin:16px 0;
+            text-decoration: none;
+            color: $white;
             @include tablet {
-                margin-top: 36px;
+                margin-top: $nonmobile-general-spacing;
                 @include font-properties(14px, 20px);
             }
         }
         &--padding {
             @include tablet {
-            margin-left: 24px;
+            margin-left: $nonmobile-general-spacing;
         }
-            @include desktop {
-                margin-left: 24px;
-            }
+
         }
     } 
     &__logo {
     @include font-family-normal;
-    @include logo-sizing;
+    @include logo-styling;
     @include font-properties(24px, 32px);
+    display: block;
+    margin-top: 64px;
     @include tablet {
+        margin-top: 0;
         display: none;
     }
         &-hidden {
-            display: none;    
+            display: none; 
             @include tablet {
                 @include font-family-normal;
-                @include logo-sizing;
+                @include logo-styling;
                 @include font-properties(24px, 32px);
                 display: block;
+                align-self: center;
             }
         }
     }
@@ -468,5 +490,17 @@
 
 
 
+// keyframes
 
+@keyframes color-change {
+    0% {
+     color: paleturquoise;
+    }
+    50% {
+      color: magenta;
+    }
+    100% {
+      color: paleturquoise;
+    }
+  }
 
