--- a/sprint-one/styles/partials/_mixins.scss
+++ b/sprint-one/styles/partials/_mixins.scss
@@ -8,6 +8,8 @@
     @content;
 }
 
+// mixins for medi queries
+
 @mixin mobile-side-padding {
     padding:0 16px;
     @content;
@@ -19,8 +21,9 @@
     @content;
 }
 
+// setting logo  styles.
 
-@mixin logo-sizing {
+@mixin logo-styling {
     max-height: 20px;
     max-width: 120px;
     text-decoration: none;
