--- a/sprint-three/styles/shows.scss
+++ b/sprint-three/styles/shows.scss
@@ -240,7 +240,7 @@
                 width: 21%;
             }
             &:hover {
-                background-color: black;
+                background-color: $bandsite-darkblack;
 
             }
         }
