--- a/sprint-three/styles/main.scss
+++ b/sprint-three/styles/main.scss
@@ -346,12 +346,11 @@
                 
             }
             &__comment {
+                resize: none;
                 height: 96px;
-                padding-left: 10px;
                 border:1px solid $mercury;
                 border-radius: 5px;
                 background-color: $alabaster;
-                padding-bottom: 70px;
                 &:focus {
                     outline: none;
                     border:1px solid $bandsite-black;
@@ -371,18 +370,19 @@
 
             &__button {
                 @include font-family-bold;
+                border: none;
                 height: 40px;
                 width: 100%;
+                background-color: $bandsite-black;
+                border-radius: 4px;
+                color: $white;
+
                 margin-top: $sixteen;
                 min-width: 150px;
                 padding:0 $sixteen*2;
                 align-self: flex-end;
-                border-radius: 4px;
-                border: none;
-                color: $white;
-                background-color: $bandsite-black;
                 &:hover {
-                    background-color: black;
+                    background-color: $bandsite-darkblack;
                 }
                     @include tablet {
                         width: 30%;
@@ -445,6 +445,40 @@
             color: $mercury;
             @include font-tablet-body-properties;
 
+        }
+
+        &__like {
+            @include font-tablet-body-properties ;
+            @include font-family-bold;
+            max-height: 30px;
+            align-self: center;
+            justify-self: flex-end;
+            border: none;
+            background-color: $silver;
+            border-radius: 4px;
+            position: absolute;
+            right: 80px;
+
+            &:hover {
+                transform: scale(1.1);
+            }
+        }
+
+        
+        &__delete {
+            @include font-tablet-body-properties ;
+            @include font-family-bold;
+            max-height: 30px;
+            align-self: center;
+            justify-self: flex-end;
+            border: none;
+            background-color: $mercury;
+            border-radius: 4px;
+            position: absolute;
+            right: 145px;
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
 
