--- a/sprint-three/styles/partials/_global.scss
+++ b/sprint-three/styles/partials/_global.scss
@@ -6,9 +6,14 @@
         margin: 0;
     }
 
-input::placeholder {
+input::placeholder, textarea::placeholder {
         @include font-family-normal;
         color: $bandsite-black;
+    }
+
+    textarea::placeholder {
+        padding-left: 16px;
+        padding-top: 4px;
     }
 
 // Classes
